--- a/index.html
+++ b/index.html
@@ -102,27 +102,31 @@
       <p><strong>Avg (10 TX):</strong> <span id="avgGas">-- Gwei</span></p>
     </div>
 
-    <!-- PnL Today flyttad upp -->
+    <!-- PnL Today -->
     <div class="card dark">
       <h3>📈 PnL Today</h3>
-      <p id="pnlToday">+ $0.00</p>
+      <p><span id="pnlToday">+ $0.00</span></p>
     </div>
 
+    <!-- Tokens Minted -->
     <div class="card dark">
       <h3>📦 Tokens Minted</h3>
-      <p id="tokensMinted">0</p>
+      <p><span id="tokensMinted">0</span></p>
     </div>
 
+    <!-- ETH Moved -->
     <div class="card dark">
       <h3>💰 ETH Moved</h3>
-      <p id="ethMoved">0 ETH total</p>
+      <p><span id="ethMoved">0 ETH total</span></p>
     </div>
 
+    <!-- Volume -->
     <div class="card dark">
       <h3>📊 Volume (30D)</h3>
-      <p id="volume30d">$0</p>
+      <p><span id="volume30d">$0</span></p>
     </div>
 
+    <!-- Connected dApps -->
     <div class="card dark">
       <h3>🧩 Connected dApps</h3>
       <ul id="connectedDapps">
@@ -130,6 +134,7 @@
       </ul>
     </div>
 
+    <!-- Latest Activity -->
     <div class="card dark full">
       <div class="track-header-row">
         <h3>📜 Latest Activity</h3>
