--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <p>Set alerts for any wallet</p>
           </div>
           <div class="card dark full">
-            <h3>🔍 Followed Wallets <span style="color: orange;">(Premium)</span></h3>
+            <h3>🔒 Followed Wallets <span style="color: orange;">(Premium)</span></h3>
             <p style="font-size: 0.9rem;">See recent activity for wallets you follow</p>
             <ul id="followedWallets" style="text-align: left; font-size: 0.75rem; padding-left: 1rem;">
               <li><strong>0xFanArt.eth</strong> – Minted on Zora</li>
