--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
         Level: <span id="userLevel">Level 1: Bronze</span><br>
         XP: <span id="currentXP">🔥 0 XP</span><br>
         <progress id="xpProgress" value="0" max="200" style="width: 100%; height: 8px;"></progress><br>
+        <small id="xpProgressLabel">0/200 XP till Level 2</small><br>
         Streak: 5 days<br>
-        Latest: Minted on Zora<br>
-        Claimed: ✅
+        Latest: Minted Token #123 on Zora<br>
+        <a href="#" id="viewActivityBtn" style="font-size: 12px;">Se mer</a><br>
+        Daily WAI Claimed: ✅
       </p>
     </div>
 
@@ -96,13 +98,14 @@
       </p>
       <button id="copyReferralBtn">Copy Link</button>
       <button id="shareFarcasterBtn" style="margin-top: 5px;">Share on Farcaster</button>
+      <p id="shareFeedback" style="display: none; color: #4caf50; font-size: 12px;">Delat! +5 WAI 🎉</p>
     </div>
 
     <!-- Milestone Tracker -->
     <div class="card dark">
       <h3>🏆 Next Milestone</h3>
       <p>
-        Reach 7-day streak → +50 WAI<br>
+        Reach 7-day streak → +50 WAI 🔥 (5/7 dagar)<br>
         Complete your first mint → +20 XP
       </p>
     </div>
@@ -115,7 +118,8 @@
         Earn XP for every interaction.<br>
         <small>Mint: +10 XP, Tx: +5 XP, Daily login: +2 XP</small><br>
         Claim WAI tokens daily.<br>
-        Unlock premium perks and level up.
+        Unlock premium perks and level up.<br>
+        <small>Ny här? Gör din första on-chain handling för +10 WAI!</small>
       </p>
     </div>
 
