--- a/index.html
+++ b/index.html
@@ -185,6 +185,49 @@
   </div>
 </section>
 
+<!-- PREMIUM -->
+<section class="tab-content premium" data-tab="premium" style="display: none;">
+  <div class="hero">
+    <h2>💎 Premium Perks</h2>
+  </div>
+
+  <div class="card-grid">
+    <div class="card dark full">
+      <h3>🚀 Upgrade to Premium</h3>
+      <p>Get exclusive benefits for only <strong>$5 one-time</strong> or <strong>$2/month</strong></p>
+      <ul>
+        <li>1.5x XP boost on all claims</li>
+        <li>Premium badge on leaderboard</li>
+        <li>Access to private token mints</li>
+        <li>Early access to new features</li>
+      </ul>
+      <button id="upgradeBtn">Upgrade Now</button>
+    </div>
+
+    <div class="card dark">
+      <h3>🔍 Wallet Tracker</h3>
+      <p>Track up to 10 public wallets</p>
+      <button disabled style="opacity: 0.6;">Premium Only</button>
+    </div>
+
+    <div class="card dark">
+      <h3>📊 Full Analytics</h3>
+      <p>See all your wallet stats over time</p>
+      <button disabled style="opacity: 0.6;">Premium Only</button>
+    </div>
+
+    <div class="card dark full">
+      <h3>✨ Unlock More</h3>
+      <p>Support WarpAI and unlock hidden rewards!</p>
+      <ul>
+        <li>Secret mints</li>
+        <li>Double referral bonuses</li>
+        <li>Limited NFT drops</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
       <!-- REWARDS -->
 <section class="tab-content rewards" data-tab="rewards" style="display: none;">
   <div class="hero">
