--- a/index.html
+++ b/index.html
@@ -230,17 +230,12 @@
 <section class="tab-content rewards" data-tab="rewards" style="display: none;">
   <div class="card-grid">
 
-    <!-- Invite & Earn -->
     <div class="card dark">
-      <h3>🚀 Invite & Earn</h3>
-      <p>Invite friends and earn WAI for each signup!</p>
-      <p>You've invited: <strong id="invitedCount">2</strong></p>
-      <p><small>Invite 5 friends before Sunday 23:59 UTC to get +20 WAI bonus!</small></p>
-      <button id="copyReferralBtn">Copy Referral Link</button>
-      <button id="shareOnXBtn" style="margin-top: 5px;">Share on X</button>
-      <button id="shareFarcasterBtn" style="margin-top: 5px;">Share on Farcaster</button>
-      <p id="shareFeedback" style="display: none; color: #4caf50; font-size: 12px;">Shared! +5 WAI 🎉</p>
-    </div>
+  <h3>🔗 Referral & Earn</h3>
+  <p>Invite friends & earn WAI<br>Invited: <span id="invitedCount">2/5</span> for +10 WAI</p>
+  <button id="copyReferralBtn">Share Invite Link</button>
+  <p id="shareFeedback" style="display: none; color: #4caf50; font-size: 12px;">Shared! +5 WAI 🎉</p>
+</div>
 
     <!-- Referral Stats -->
     <div class="card dark">
