--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       <p>Total Earned: <strong>10 WAI</strong></p>
       <p>Next reward: Invite 3 more for +15 WAI</p>
       <progress value="2" max="5" style="width: 100%; height: 6px;"></progress>
-      <p><small>Bjud in 3 till och lås upp Referral Pro-prestationen!</small></p>
+      <p><small>Invite 3 more and unlock Referral Pro-achievement !</small></p>
     </div>
 
     <!-- Leaderboard -->
