--- a/index.html
+++ b/index.html
@@ -460,10 +460,6 @@
 </main>
 </div>
 
-<!-- Externa skript -->
+<script src="https://cdn.jsdelivr.net/npm/@walletconnect/ethereum-provider@2.10.4/dist/index.umd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
-<script src="https://unpkg.com/@web3modal/standalone@2.6.4/dist/index.umd.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.0/build/qrcode.min.js"></script>
 <script src="app.js"></script>
-</body>
-</html>
