--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Uppdaterad CSP för att tillåta nödvändiga resurser -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' https://base-mainnet.g.alchemy.com wss://*.walletconnect.com wss://*.walletconnect.org;">
-  <title>WarpAi</title>
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' https://base-mainnet.g.alchemy.com wss://*.walletconnect.com wss://*.walletconnect.org;">  <title>WarpAi</title>
   <link rel="stylesheet" href="style.css" />
   <!-- Säkra nycklar -->
   <meta name="alchemy-key" content="aH4-X2bNp1BarPcBcHiWR6vHxJz_lGbA">
